--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                             <strong>$74.99</strong>
                             <span class="line-through">$124.99</span>
                         </p>
-                        <div class="quantity-controlle">
+                        <div class="quantity-controller">
                             <button>
                                 <i class="fa-solid fa-minus"></i>
                             </button>
