--- a/index.html
+++ b/index.html
@@ -107,6 +107,12 @@
                             <button>
                                 <i class="fa-solid fa-plus"></i>
                             </button>
+
+                        </div>
+                        <div class="prodact-remove">
+                            <div class="remove">
+                                <button>Remove</button>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -128,6 +134,35 @@
                                 <i class="fa-solid fa-plus"></i>
                             </button>
                         </div>
+                        <div class="prodact-remove">
+                            <div class="remove">
+                                <button>Remove</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="./img/photo3.jpg" alt="">
+                    <div class="product-info">
+                        <h2>Antique Clock</h2>
+                        <p>
+                            <strong>$74.99</strong>
+                            <span class="line-through">$124.99</span>
+                        </p>
+                        <div class="quantity-controller">
+                            <button>
+                                <i class="fa-solid fa-minus"></i>
+                            </button>
+                            <p>1</p>
+                            <button>
+                                <i class="fa-solid fa-plus"></i>
+                            </button>
+                        </div>
+                        <div class="prodact-remove">
+                            <div class="remove">
+                                <button>Remove</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
@@ -142,6 +177,8 @@
             </div>
         </div>
     </main>
+
+    <script src="checkout.js"></script>
 
 </body>
 
