--- a/index.html
+++ b/index.html
@@ -91,88 +91,88 @@
         </form>
         <div id="products-preview">
             <div id="product-painel">
-                <div class="product">
-                    <img src="./img/photo1.png" alt="">
-                    <div class="product-info">
-                        <h2>Vintage Backbag</h2>
-                        <p>
-                            <strong>$54.99</strong>
-                            <span class="line-through">$94.99</span>
-                        </p>
-                        <div class="quantity-controller">
-                            <button>
-                                <i class="fa-solid fa-minus"></i>
-                            </button>
-                            <p>1</p>
-                            <button>
-                                <i class="fa-solid fa-plus"></i>
-                            </button>
-
-                        </div>
-                        <div class="prodact-remove">
-                            <div class="remove">
-                                <button>Remove</button>
+                <div class="products">
+                    <div class="product">
+                        <img src="img/photo1.png" alt="" />
+                        <div class="product-info">
+                            <h2>Vintage Backbag</h2>
+                            <div class="product-price">
+                                <p>
+                                    <strong>25.98</strong>
+                                    <span class="line-through">34.99</span>
+                                </p>
                             </div>
+                            <div class="quantity-controller">
+                                <i class="fa-solid fa-minus"></i>
+                                <p class="quantity">1</p>
+                                <i class="fa-solid fa-plus"></i>
+                            </div>
+                            <div class="product-removal">
+                                <button class="remove-product">Remove</button>
+                            </div>
+                            <div class="product-line-price">25.98</div>
+                        </div>
+                    </div>
+
+                    <div class="product">
+                        <img src="img/photo2.png" alt="" />
+                        <div class="product-info">
+                            <h2>Levi Shoes</h2>
+                            <div class="product-price">
+                                <p>
+                                    <strong>45.99</strong>
+                                    <span class="line-through">54.99</span>
+                                </p>
+                            </div>
+                            <div class="quantity-controller">
+                                <i class="fa-solid fa-minus"></i>
+                                <p class="quantity">1</p>
+                                <i class="fa-solid fa-plus"></i>
+                            </div>
+                            <div class="product-removal">
+                                <button class="remove-product">Remove</button>
+                            </div>
+                            <div class="product-line-price">45.99</div>
+                        </div>
+                    </div>
+
+                    <div class="product">
+                        <img src="img/photo3.jpg" alt="" />
+                        <div class="product-info">
+                            <h2>Antique Clock</h2>
+                            <div class="product-price">
+                                <p>
+                                    <strong>74.99</strong>
+                                    <span class="line-through">94.99</span>
+                                </p>
+                            </div>
+                            <div class="quantity-controller">
+                                <i class="fa-solid fa-minus"></i>
+                                <p class="quantity">1</p>
+                                <i class="fa-solid fa-plus"></i>
+                            </div>
+                            <div class="product-removal">
+                                <button class="remove-product">Remove</button>
+                            </div>
+                            <div class="product-line-price">74.99</div>
                         </div>
                     </div>
                 </div>
-
-                <div class="product">
-                    <img src="./img/photo2.png" alt="">
-                    <div class="product-info">
-                        <h2>Levi Shoes</h2>
-                        <p>
-                            <strong>$74.99</strong>
-                            <span class="line-through">$124.99</span>
-                        </p>
-                        <div class="quantity-controller">
-                            <button>
-                                <i class="fa-solid fa-minus"></i>
-                            </button>
-                            <p>1</p>
-                            <button>
-                                <i class="fa-solid fa-plus"></i>
-                            </button>
-                        </div>
-                        <div class="prodact-remove">
-                            <div class="remove">
-                                <button>Remove</button>
-                            </div>
-                        </div>
-                    </div>
+                <div class="buy-detail" id="cart-subtotal">
+                    <p>Subtotal</p>
+                    <p>0</p>
                 </div>
-                <div class="product">
-                    <img src="./img/photo3.jpg" alt="">
-                    <div class="product-info">
-                        <h2>Antique Clock</h2>
-                        <p>
-                            <strong>$74.99</strong>
-                            <span class="line-through">$124.99</span>
-                        </p>
-                        <div class="quantity-controller">
-                            <button>
-                                <i class="fa-solid fa-minus"></i>
-                            </button>
-                            <p>1</p>
-                            <button>
-                                <i class="fa-solid fa-plus"></i>
-                            </button>
-                        </div>
-                        <div class="prodact-remove">
-                            <div class="remove">
-                                <button>Remove</button>
-                            </div>
-                        </div>
-                    </div>
+                <div class="buy-detail" id="cart-tax">
+                    <p>Tax(%18)</p>
+                    <p>0</p>
                 </div>
-
-                <div class="buy-detail" id="shipping">
+                <div class="buy-detail" id="cart-shipping">
                     <p>Shipping</p>
-                    <p>$19</p>
+                    <p>0</p>
                 </div>
-                <div class="buy-detail" id="total">
+                <div class="buy-detail" id="cart-total">
                     <p>Total</p>
-                    <p>$148.98</p>
+                    <p>0</p>
                 </div>
             </div>
         </div>
